// Venture Studio OS — Prisma schema (Phase 01 Foundation)
// Normative source: 04-architecture/DATA_MODEL.md
// NOTE: SQLite does not support native enums, so enum-like fields are stored as
// String and validated by Zod at the service layer (see src/lib/validation.ts).
// MVP uses UTC timestamps everywhere (DAT model rule).

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

model Project {
  id               String    @id @default(uuid())
  name             String // 1..150
  summary          String? // 0..500
  status           String    @default("DRAFT") // ProjectStatus
  health           String    @default("HEALTHY") // ProjectHealth (derived)
  templateId       String?
  templateVersion  String?
  currentStageId   String?
  ownerName        String // 1..120
  startedAt        DateTime?
  targetDate       DateTime? // stored as date; compared by date only at service layer
  progressPercent  Int       @default(0) // 0..100 (derived)
  archivedAt       DateTime?
  preArchiveStatus String?
  createdAt        DateTime  @default(now()) @map("createdAt")
  updatedAt        DateTime  @updatedAt @map("updatedAt")

  brainEntries         ProjectBrainEntry[]
  stages               ProjectStage[]
  deliverables         Deliverable[]
  workPackets          WorkPacket[]
  reviews              Review[]
  decisions            DecisionRecord[]
  risks                RiskRecord[]
  versions             VersionRecord[]
  activities           ActivityRecord[]
  intents              ProjectIntent[]
  benchmarks           BenchmarkBrief[]
  qualityProfiles      QualityProfile[]
  gateResults          QualityGateResult[]
  learningRecords      LearningRecord[]
  evidence             Evidence[]
  attentionEvents      AttentionEvent[]
  acceptanceCriterions AcceptanceCriterion[]

  @@index([status])
  @@index([archivedAt])
}

model ProjectBrainEntry {
  id        String   @id @default(uuid())
  projectId String
  section   String // ProjectBrainSection enum
  title     String // 1..150
  content   String // markdown (sanitized before render)
  order     Int // >=0, unique within project+section
  createdAt DateTime @default(now()) @map("createdAt")
  updatedAt DateTime @updatedAt @map("updatedAt")
  project   Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@unique([projectId, section, order])
  @@index([projectId])
}

model ProjectStage {
  id              String   @id @default(uuid())
  projectId       String
  templateStageId String?
  name            String // 1..100
  order           Int // >=0 unique within project
  status          String   @default("NOT_STARTED") // StageStatus
  entryCriteria   String   @default("[]") // JSON array
  exitCriteria    String   @default("[]") // JSON array
  createdAt       DateTime @default(now()) @map("createdAt")
  updatedAt       DateTime @updatedAt @map("updatedAt")
  project         Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@unique([projectId, order])
  @@index([projectId])
}

model Deliverable {
  id           String    @id @default(uuid())
  projectId    String
  parentId     String?
  stageId      String?
  title        String // 1..180
  description  String? // markdown
  type         String // 1..80
  status       String    @default("PLANNED") // DeliverableStatus
  priority     String    @default("MEDIUM") // Priority
  ownerAgentId String?
  dueDate      DateTime?
  order        Int // >=0 unique among siblings
  weight       Float     @default(1) // 0..100
  createdAt    DateTime  @default(now()) @map("createdAt")
  updatedAt    DateTime  @updatedAt @map("updatedAt")
  project      Project   @relation(fields: [projectId], references: [id], onDelete: Cascade)

  children           Deliverable[]           @relation("DeliverableHierarchy")
  parent             Deliverable?            @relation("DeliverableHierarchy", fields: [parentId], references: [id])
  dependencies       DeliverableDependency[] @relation("DependsOn")
  dependedOnBy       DeliverableDependency[] @relation("DependedBy")
  acceptanceCriteria AcceptanceCriterion[]
  workPackets        WorkPacket[]

  @@unique([projectId, order])
  @@index([projectId])
  @@index([parentId])
}

model DeliverableDependency {
  id                     String      @id @default(uuid())
  deliverableId          String
  dependsOnDeliverableId String
  deliverable            Deliverable @relation("DependsOn", fields: [deliverableId], references: [id], onDelete: Cascade)
  dependsOn              Deliverable @relation("DependedBy", fields: [dependsOnDeliverableId], references: [id], onDelete: Cascade)

  @@unique([deliverableId, dependsOnDeliverableId])
  @@index([deliverableId])
}

model AcceptanceCriterion {
  id                 String       @id @default(uuid())
  projectId          String
  deliverableId      String?
  workPacketId       String?
  statement          String // 1..500
  status             String       @default("NOT_VERIFIED") // CriterionStatus
  verificationMethod String       @default("MANUAL_CHECK") // VerificationMethod
  evidenceRequired   Boolean      @default(true)
  createdAt          DateTime     @default(now()) @map("createdAt")
  updatedAt          DateTime     @updatedAt @map("updatedAt")
  project            Project      @relation(fields: [projectId], references: [id], onDelete: Cascade)
  deliverable        Deliverable? @relation(fields: [deliverableId], references: [id])
  workPacket         WorkPacket?  @relation(fields: [workPacketId], references: [id])
  evidence           Evidence[]

  @@index([projectId])
  @@index([deliverableId])
  @@index([workPacketId])
}

model WorkPacket {
  id                 String                @id @default(uuid())
  projectId          String
  deliverableId      String?
  title              String // 1..180
  objective          String // markdown
  scope              String // markdown
  exclusions         String // markdown
  inputs             String                @default("[]") // JSON array
  expectedOutputs    String                @default("[]") // JSON array (>=1)
  status             String                @default("DRAFT") // WorkPacketStatus
  assigneeAgentId    String?
  priority           String                @default("MEDIUM") // Priority
  dueDate            DateTime?
  submittedAt        DateTime?
  approvedAt         DateTime?
  versionNumber      Int                   @default(1) // >=1
  createdAt          DateTime              @default(now()) @map("createdAt")
  updatedAt          DateTime              @updatedAt @map("updatedAt")
  project            Project               @relation(fields: [projectId], references: [id], onDelete: Cascade)
  deliverable        Deliverable?          @relation(fields: [deliverableId], references: [id])
  acceptanceCriteria AcceptanceCriterion[]
  evidence           Evidence[]
  reviews            Review[]

  @@index([projectId])
  @@index([deliverableId])
}

model Evidence {
  id                     String               @id @default(uuid())
  projectId              String
  workPacketId           String?
  acceptanceCriterionId  String?
  type                   String // EvidenceType
  title                  String // 1..150
  location               String? // file path/URL where relevant
  checksum               String?
  immutableAfterApproval Boolean              @default(true)
  createdAt              DateTime             @default(now()) @map("createdAt")
  updatedAt              DateTime             @updatedAt @map("updatedAt")
  project                Project              @relation(fields: [projectId], references: [id], onDelete: Cascade)
  workPacket             WorkPacket?          @relation(fields: [workPacketId], references: [id])
  acceptanceCriterion    AcceptanceCriterion? @relation(fields: [acceptanceCriterionId], references: [id])

  @@index([projectId])
  @@index([workPacketId])
}

model Review {
  id               String          @id @default(uuid())
  workPacketId     String
  reviewerName     String // 1..120
  status           String          @default("PENDING") // ReviewStatus
  summary          String? // markdown
  submittedVersion Int
  decidedAt        DateTime?
  createdAt        DateTime        @default(now()) @map("createdAt")
  updatedAt        DateTime        @updatedAt @map("updatedAt")
  workPacket       WorkPacket      @relation(fields: [workPacketId], references: [id], onDelete: Cascade)
  comments         ReviewComment[]
  project          Project?        @relation(fields: [projectId], references: [id])
  projectId        String?

  @@index([workPacketId])
}

model ReviewComment {
  id          String   @id @default(uuid())
  reviewId    String
  authorName  String
  body        String
  criterionId String?
  createdAt   DateTime @default(now()) @map("createdAt")
  review      Review   @relation(fields: [reviewId], references: [id], onDelete: Cascade)

  @@index([reviewId])
}

model DecisionRecord {
  id                     String   @id @default(uuid())
  projectId              String?
  decisionId             String // unique human-readable
  title                  String // 1..180
  context                String // markdown
  options                String // JSON array
  selectedOption         String
  rationale              String // markdown
  affectedRequirementIds String   @default("[]") // JSON array
  decidedBy              String
  decidedAt              DateTime
  createdAt              DateTime @default(now()) @map("createdAt")
  updatedAt              DateTime @updatedAt @map("updatedAt")
  project                Project? @relation(fields: [projectId], references: [id])

  @@unique([decisionId])
  @@index([projectId])
}

model RiskRecord {
  id           String    @id @default(uuid())
  projectId    String
  title        String
  description  String
  impact       String // RiskImpact
  likelihood   String // RiskLikelihood
  status       String    @default("OPEN") // RiskStatus
  mitigation   String?
  ownerAgentId String?
  targetDate   DateTime?
  reviewDate   DateTime?
  createdAt    DateTime  @default(now()) @map("createdAt")
  updatedAt    DateTime  @updatedAt @map("updatedAt")
  project      Project   @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@index([projectId])
}

model VersionRecord {
  id              String    @id @default(uuid())
  projectId       String
  versionLabel    String
  versionType     String // VersionType
  sourceReference String?
  changeSummary   String?
  status          String
  createdBy       String
  approvedAt      DateTime?
  releasedAt      DateTime?
  createdAt       DateTime  @default(now()) @map("createdAt")
  updatedAt       DateTime  @updatedAt @map("updatedAt")
  project         Project   @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@index([projectId])
}

model Agent {
  id            String   @id @default(uuid())
  name          String
  kind          String // AgentKind: HUMAN | AI
  provider      String?
  model         String?
  capabilities  String   @default("[]") // JSON
  autonomyLevel String   @default("MANUAL") // AutonomyLevel
  status        String   @default("IDLE") // AgentStatus
  createdAt     DateTime @default(now()) @map("createdAt")
  updatedAt     DateTime @updatedAt @map("updatedAt")
}

model ActivityRecord {
  id         String   @id @default(uuid())
  actor      String
  action     String
  entityType String
  entityId   String
  projectId  String?
  summary    String
  metadata   String   @default("{}") // JSON
  createdAt  DateTime @default(now()) @map("createdAt")
  project    Project? @relation(fields: [projectId], references: [id])

  @@index([projectId])
  @@index([entityType, entityId])
}

model ProjectIntent {
  id               String    @id @default(uuid())
  projectId        String
  problem          String
  audience         String
  desiredOutcome   String
  constraints      String
  nonGoals         String
  successMeasures  String    @default("[]") // JSON
  ownerPriorities  String    @default("[]") // JSON
  commercialTarget String?
  status           String    @default("DRAFT") // IntentStatus
  approvedAt       DateTime?
  supersededById   String?
  createdAt        DateTime  @default(now()) @map("createdAt")
  updatedAt        DateTime  @updatedAt @map("updatedAt")
  project          Project   @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@index([projectId])
}

model BenchmarkBrief {
  id                   String    @id @default(uuid())
  projectId            String
  purpose              String
  references           String    @default("[]") // JSON
  dimensions           String    @default("[]") // JSON
  marketBaseline       String?
  targetSummary        String?
  differentiators      String    @default("[]") // JSON
  intentionalOmissions String    @default("[]") // JSON
  evidenceDate         DateTime?
  status               String    @default("DRAFT") // BenchmarkStatus
  createdAt            DateTime  @default(now()) @map("createdAt")
  updatedAt            DateTime  @updatedAt @map("updatedAt")
  project              Project   @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@index([projectId])
}

model QualityProfile {
  id                  String   @id @default(uuid())
  projectId           String
  name                String
  dimensions          String   @default("[]") // JSON
  mandatoryDimensions String   @default("[]") // JSON
  targetLevels        String   @default("[]") // JSON (QualityLevel)
  status              String   @default("DRAFT") // ProfileStatus
  createdAt           DateTime @default(now()) @map("createdAt")
  updatedAt           DateTime @updatedAt @map("updatedAt")
  project             Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@index([projectId])
}

model QualityGateResult {
  id               String   @id @default(uuid())
  projectId        String
  level            String // GateLevel
  entityId         String
  outcome          String // GateOutcome
  criterionResults String   @default("[]") // JSON
  evidenceIds      String   @default("[]") // JSON
  riskDecisionId   String?
  evaluatedBy      String
  evaluatedAt      DateTime @default(now())
  createdAt        DateTime @default(now()) @map("createdAt")
  project          Project  @relation(fields: [projectId], references: [id])

  @@index([projectId])
}

model LearningRecord {
  id                 String   @id @default(uuid())
  projectId          String
  sourceType         String // LearningSource
  summary            String
  evidenceIds        String   @default("[]") // JSON
  impact             String?
  status             String   @default("NEW") // LearningStatus
  convertedReference String?
  createdAt          DateTime @default(now()) @map("createdAt")
  updatedAt          DateTime @updatedAt @map("updatedAt")
  project            Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)

  @@index([projectId])
}

model AttentionEvent {
  id              String    @id @default(uuid())
  projectId       String
  type            String // AttentionEventType
  startedAt       DateTime
  endedAt         DateTime?
  durationSeconds Int?
  relatedEntityId String?
  notes           String?
  createdAt       DateTime  @default(now()) @map("createdAt")
  project         Project   @relation(fields: [projectId], references: [id])

  @@index([projectId])
}
